Fixed alignment of zoom buttons with search button
Applied all leaflet-touch stylings to zoom buttons even when not detecting touch-screen capability
Zoom buttons line up with search button in Firefox, Safari, and Chrome now!

--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -24,17 +24,24 @@
   z-index: 800;
 }
 
-.leaflet-control-zoom-in {
+/* leaflet-touch styling for zoom buttons */
+.leaflet-bar {
+  border: solid 2px rgba(0,0,0,0.2) !important;
+  background-clip: padding-box !important;
+  box-shadow: none !important;
+}
+
+.leaflet-bar a {
   width: 30px !important;
   height: 30px !important;
   line-height: 30px !important;
+}
+
+.leaflet-control-zoom-in {
   font-size: 22px !important;
 }
 
 .leaflet-control-zoom-out {
-  width: 30px !important;
-  height: 30px !important;
-  line-height: 30px !important;
   font-size: 24px !important;
 }
 
